--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -65,6 +65,10 @@ jobs:
           tag: 'sha-${{ steps.comment.outputs.tagname }}'
 
           locales: '["en"]'
+      - name: Sleep for 30 seconds
+        uses: jakejarvis/wait-action@master
+        with:
+          time: '3s'
       - name: Lokalise create task
         if: steps.lokalise_push.outputs.uploaded == 'true' && (github.event.label && github.event.label.name == 'start-localisation') || (!github.event.label && steps.check_pr_labels.outputs.passed == 'true')
         uses: pleo-io/actions/lokalise-create-task@v6.0
