--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -49,7 +49,7 @@ jobs:
         run: echo "::set-output name=name::$(echo ${{github.event.ref}} | cut -c12-)"
       - name: Lokalise File Push
         if: (github.event.label && github.event.label.name == 'start-localisation') || (!github.event.label && steps.check_pr_labels.outputs.passed == 'true')
-        uses: igorDolzh/lokalise-file-push@master
+        uses: igorDolzh/lokalise-file-push@0.2.0
         id: lokalise_push
         with:
           # Api token for the Lokalise account
@@ -65,10 +65,6 @@ jobs:
           tag: 'sha-${{ steps.comment.outputs.tagname }}'
 
           locales: '["en"]'
-      - name: Sleep for 30 seconds
-        uses: jakejarvis/wait-action@master
-        with:
-          time: '3s'
       - name: Lokalise create task
         if: steps.lokalise_push.outputs.uploaded == 'true' && (github.event.label && github.event.label.name == 'start-localisation') || (!github.event.label && steps.check_pr_labels.outputs.passed == 'true')
         uses: pleo-io/actions/lokalise-create-task@v6.0
