--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -66,7 +66,7 @@ jobs:
 
           locales: '["en"]'
       - name: Lokalise create task
-        if: steps.lokalise_push.outputs.uploaded == 'true' && (github.event.label && github.event.label.name == 'start-localisation') || (!github.event.label && steps.check_pr_labels.outputs.passed == 'true')
+        if: steps.lokalise_push.outputs.uploaded == 'true' && ((github.event.label && github.event.label.name == 'start-localisation') || (!github.event.label && steps.check_pr_labels.outputs.passed == 'true'))
         uses: pleo-io/actions/lokalise-create-task@v6.0
         with:
           # Api token for the Lokalise account
