--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -49,7 +49,7 @@ jobs:
         run: echo "::set-output name=name::$(echo ${{github.event.ref}} | cut -c12-)"
       - name: Lokalise File Push
         if: (github.event.label && github.event.label.name == 'start-localisation') || (!github.event.label && steps.check_pr_labels.outputs.passed == 'true')
-        uses: pleo-io/actions/lokalise-create-task@v9.2
+        uses: pleo-io/actions/lokalise-file-push@v9.2
         id: lokalise_push
         with:
           # Api token for the Lokalise account
@@ -62,9 +62,10 @@ jobs:
           # The relative file path where language files will be found
           file-path: src/locales/%LANG_ISO%/messages.po
 
-          tag: 'sha-${{ steps.comment.outputs.tagname }}'
+          tags: '["sha-${{ steps.tag.outputs.tagname }}"]'
 
           locales: '["en"]'
+          
       - name: Lokalise create task
         uses: igorDolzh/lokalise-file-push@0.0.16
         with:
