--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -1,6 +1,9 @@
 on:
   pull_request:
     types: [synchronize, labeled]
+  push:
+    branches:
+      - master
 name: Push transl1231ations
 jobs:
   merge:
