--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -27,6 +27,8 @@ jobs:
         env:
           SECRET_TOKEN: ${{ secrets.SECRET_TOKEN }}
         run: |
+          git config --global user.email "dev@pleo.io"
+          git config --global user.name "Dev bot"
           git add .
           git commit -m "Merge with master: message extraction"
           git push
